# movies

./: .bowerrc  .coveragerc  .csscomb.json  .dockerignore  .editorconfig  .eslintrc  .eslintrc.json  .flake8  .gitignore  .isort  .prettierignore  .pydocstyle  .pylintrc  .travis.yml  .yamllint.yml  CLAUDE.md  CLAUDE_SUGGESTIONS.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  README.rst  bower.json  clean.sh  cleanjs.sh  db.sql  db_env_prod_template.sh  deploy.sh  doc.rst  docker-compose.yml  docker.env  docker_secret.env.tpl  docker_secrets.env.tpl  entrypoint.sh  env.sh  env_custom.sh.tpl  env_docker  env_docker_template.sh  env_secrets.sh.tpl  (+19 more)
.github/workflows/: .s3cfg  ci_cd.yaml  db_backup.yaml  deployment.yaml  destruction.yaml  load_providers.yaml  remove_unused_movies.yaml  restart_app.yaml  reusable_restart_app.yaml  reusable_test.yaml  run_command.yaml  test.yaml  update_github_actions.yaml  update_imdb_ratings.yaml  update_movie_data.yaml  update_movie_data_starting_from_movie_id.yaml  update_vk_avatars.yaml  update_watch_data.yaml  update_watch_data_minimal.yaml
deployment/: configmap.yaml  deployment.yaml  ingress.yaml  ingress_backend.yaml  ingress_frontend.yaml  service.yaml  service_backend.yaml  service_frontend.yaml
dev_scripts/: create_venv.sh  pydiatra.sh
frontend/: .prettierignore  Dockerfile  FRONTEND_TECHNICAL_DOCUMENTATION.md  env.sh  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docker/: nginx.conf
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.vue  axios-augment.d.ts  axios.ts  const.ts  env.d.ts  helpers.ts  main.ts  modules.d.ts  router.ts  test-setup.ts  toast.ts  types.ts
frontend/src/components/: AvatarUploadComponent.vue  ErrorBoundary.vue  FooterComponent.vue  LoadingIndicator.vue  LogoComponent.vue  MenuComponent.vue  MenuItem.vue  MoviesList.vue  ShareButton.vue  ThemeToggle.vue  UserAvatarComponent.vue  UserListView.vue  YearSelectorComponent.vue  types.ts
frontend/src/composables/: formValidation.ts  mobile.ts  types.ts  useAsyncOperation.ts  useListNavigation.ts  useListViewFiltering.ts  useListViewPagination.ts  useListViewService.ts  useListViewSorting.ts  useMovieListSEO.ts  useMovieOperations.ts  useRecordCounts.ts  useRecordFilters.ts  useRecordSorting.ts  useRecordsData.ts  useRequestDeduplication.ts  useSEO.ts  useSocialSharing.ts  useStructuredData.ts
frontend/src/plugins/: vuetify.ts  webfontloader.ts
frontend/src/services/: listViewService.ts  shareService.ts
frontend/src/stores/: auth.ts  feed.ts  listView.ts  records.ts  theme.ts  types.ts
frontend/src/styles/: dark-theme-components.css  dark-theme-custom.css  dark-theme-pagination.css  dark-theme-typography.css  footer.scss  main.scss  styles.scss  theme-transitions.css  theme-variables.css  theme.scss  utils.scss
frontend/src/types/: common.ts  listView.ts
frontend/src/utils/: errorHandling.ts  movieUtils.ts
ios/: README.md
ios/MoviesApp/: APIService.swift  ContentView.swift  GalleryView.swift  LoginView.swift  Models.swift  MovieDetailView.swift  MovieListView.swift  MoviesAppApp.swift  RecommendationPreferences.swift  RecommendationsView.swift  SearchView.swift  TrendingView.swift
ios/MoviesApp.xcodeproj/: project.pbxproj
makefiles/: colors.mk  help.mk  macros.mk
movies_project/: manage.py
movies_project/movies/: ._functions.py  ._views.py  admin.py  functions.py  menus.py  models.py  views.py
movies_project/movies_project/: settings.py  urls.py  wsgi.py
movies_project/templates/: ._base.html  base.html  feed.html  list.html  login.html  people.html  preferences.html  recommendation.html  search.html
scripts/: backup_db.sh  connect_db.sh  create_db.sh  djhtml.sh  drop_db.sh  flush_cdn_cache.sh  get_db_archive_name.sh  get_pod_id.sh  jsonlint.sh  load_db.sh  pydiatra.sh  run_management_command.sh  run_management_command_interactive_prod.sh  run_shell_prod.sh  shellcheck.sh  upload_backup.sh
src/: __init__.py  manage.py
src/movies/: __init__.py  apps.py  celery.py  initial_settings.py  local_settings_template.py  settings.py  settings_tests.py  urls.py  wsgi.py
src/moviesapp/: __init__.py  admin.py  apps.py  command_utils.py  context_processors.py  converters.py  exceptions.py  fb.py  forms.py  functions.py  http.py  menus.py  middleware.py  models.py  omdb.py  renderers.py  search.py  serializers.py  social.py  tasks.py  tests.py  tmdb.py  translation.py  translations.py  types.py  utils.py  validation.py  views.py  vk.py
src/templates/: about.html  base.html  feed.html  gallery.html  list.html  login.html  people.html  preferences.html  recommendation.html  reviews.html  search.html  trending.html
(+318 files in other folders)
