[project]
name = "movies"
version = "0.0.0"
description = "Movies is a movie database and recommendation system built with Django."
authors = [{name = "Anton Samarchyan", email = "desecho@gmail.com"}]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    # Django
    "Django>=5.2.4,<6.0.0",
    # django-annoying is only used in existing migrations.
    "django-annoying>=0.10.6,<0.11.0",
    "django-tqdm>=1.3.1,<2.0.0",
    "django-custom-anonymous>=0.5.0,<0.6.0",
    "django-modeladmin-reorder>=0.3.1,<0.4.0",
    "django-stubs-ext>=5.2.2,<6.0.0",
    "django-celery-results>=2.4.0,<3.0.0",
    "django-countries[pyuca]>=7.6.1,<8.0.0",
    "django-timezone-field>=7.1,<8.0.0",
    "djangorestframework>=3.13.1,<4.0.0",
    "djangorestframework-simplejwt>=5.5.1,<6.0.0",
    "django-cors-headers>=4.4.0,<5.0.0",
    "django-rest-registration>=0.9.0,<0.10.0",

    # Requests
    "requests>=2.31.0,<3.0.0",
    "requests-toolbelt>=1.0.0,<2.0.0",

    # Dates
    "python-dateutil>=2.8.2,<3.0.0",
    "Babel>=2.10.3,<3.0.0",

    "mysqlclient>=2.2.0,<3.0.0",
    "sentry-sdk>=2.14.0,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "typing-extensions>=4.3.0,<5.0.0",
    "Authlib>=1.0.1,<2.0.0",
    "pip>=25.2,<26.0.0",
    "wget>=3.2,<4.0.0",
    "tmdbsimple>=2.9.1,<3.0.0",
    "celery[redis]>=5.2.7,<6.0.0",
    # This seems to be required for django-timezone-field
    "tzdata>=2025.2,<2026.0",

    # File storage and image processing
    "django-storages[boto3]>=1.14.4,<2.0.0",
    "Pillow>=11.0.0,<12.0.0",

    # AI/ML
    "openai>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    # Pytest
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-mock",
    "pytest-django",

    # Django
    "django-test-without-migrations",

    # Linting
    "ruff",
    "safety",
    "restructuredtext_lint",
    "mypy",
    "pygments", # For syntax highlighting in code examples

    # Stubs
    # Setting version manually because it wouldn't install the latest version for whatever reason
    "django-stubs>=5.2.2,<6.0.0",
    "djangorestframework-stubs",
    "types-python-dateutil",
    "types-requests",
    "types-babel",
    "celery-types",

    "beautifulsoup4",
    "requests-mock",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 119
target-version = "py311"
extend-exclude = ["src/moviesapp/migrations"]
